--- a/css/update/main-3.0.6.css
+++ b/css/update/main-3.0.6.css
@@ -2104,7 +2104,7 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
 /* Notification Settings */
 
 .scroller-1bVxF5 {
-    background-color: var(--background-obsidian) !important;
+    background-color: transparent !important;
 }
 
 /* Pinned Message */
