--- a/Obsidian.theme.css
+++ b/Obsidian.theme.css
@@ -15,6 +15,8 @@
 /*Addons*/
     /*Mac TitleBar*/
     @import url("https://mimir-gxp.github.io/Obsidian/css/addons/MacTitleBar.css");
+    /* Icon Pack by https://github.com/Lavender-Discord/IconsaxDiscord*/
+    @import url("https://lavender-discord.github.io/IconsaxDiscord/theme.css");
 
 :root {
 
