fix members section

--- a/css/update/main-3.0.6.css
+++ b/css/update/main-3.0.6.css
@@ -516,6 +516,10 @@ code {
     cursor: pointer;
 }
 
+.member-48YF_l, .members-3WRCEx {
+    background-color: transparent;
+}
+
 /*CHANNEL MEMBER LIMIT */
 
 .total-1c5KCN:after {
