--- a/Obsidian.theme.css
+++ b/Obsidian.theme.css
@@ -4,7 +4,7 @@
 * @description Obsidian Discord Theme.
 * @author ᛗᛁᛗᛁᚱ
 * @authorId 106097290640363520
-* @invite t2c
+* @invite infinitygames
 * @website http://github.com/MIMIR-GXP
 * @source https://github.com/MIMIR-GXP/Obsidian
 */
