--- a/Obsidian.theme.css
+++ b/Obsidian.theme.css
@@ -87,8 +87,8 @@
             --link-colour: #4A60D6FF;
 
             /* FONT */
-            --font: 'Rubik';
-            --font-code: 'Rubik';
+            --font: 'gg sans', sans-serif;
+            --font-code: 'gg sans', sans-serif;
 
         /* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 
